--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "homepage": "https://github.com/OmidDeiminiyat/API-til-Homelands-2025#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "path": "^0.12.7",
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
   }
 }
